2012-11-20  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface-package-def.lisp (#:gnuplot-interface):
	Removed use of EXTERNAL-PROGRAM, as it currently does not work

	* gnuplot-interface.asd (#:gnuplot-interface): Removed dependency
	on EXTERNAL-PROGRAM, as it currently does not work

	* gnuplot-interface.lisp (*native-external-program*): New variable
	controls compilation of START-GNUPLOT
	(start-gnuplot): Cleaned up code, documentation, and code comments.

2012-11-07  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface-package-def.lisp: Pushing
	:native-external-program to *features*

	* gnuplot-interface.lisp (start-gnuplot): Changed :ouput from t to
	:stream for SBCL native command.
	(start-gnuplot): Fixed a closing parethesis error on clisp &
	cygwin & native-external-program feature selector
	(stop-gnuplot): Wrapped cleanup code inside unwind-protect.  Not
	quite sure that it is working though

2012-11-06  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (start-gnuplot): Added feature
	`native-external-program' to enable testing of external program
	invocation

2012-10-27  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp: Renamed variables *input* and *output*
	into more descriptive *gnuplot-input* and *gnuplot-output*
	(start-gnuplot): I now use external-program:run to start gnuplot
	-- I had to modify that routine because it was signaling an error,
	and I notified the maintainer.  I kept the old code for clisp for
	just in case.
	Changed all defvar to defparameter for easier maintenance.

2012-06-21  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (*executable*, *terminal*): The tests
	were not well defined on clisp+cygwin.  I had to redefine unix to
	exclude clisp & wgnuplot.  This needs more attention.

2012-05-31  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp: Porting code to desktop.  Because of