@@ -1,3 +1,9 @@
+2012-11-21  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* gnuplot-interface.lisp (start-gnuplot): Fixed bug in sbcl.  Now
+	calling *executable*
+	(*executable*): Added darwin option for macports
+
 2012-11-20  Mirko Vukovic  <mirko.vukovic@us.tel.com>
 
 	* gnuplot-interface-package-def.lisp (#:gnuplot-interface):
